Archive2/a4/dd7f6befcca842/output
main.cpp:1:19: error: conversion from 'const char [5]' to non-scalar type 'test' requested
 struct test{} _ = "text";
                   ^
